i added email js validation and read more popup in  profile page

--- a/about-me.html
+++ b/about-me.html
@@ -13,16 +13,16 @@
 </head>
 <body>
    <header class="header">
-    <a href="profile.html" class="logo">portfolio</a>
+    <a href="index.html" class="logo">portfolio</a>
     <!-- font menu-icon -->
      <i class='bx bx-menu' id="menu-icon" ></i>
      <!--  -->
 <!-- nav begin here -->
     <nav class="navbar">
-        <a href="profile.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="about-me.html">About</a>
         <a href="service.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Projects</a>
         <a href="contact.html">Contact</a>
 
     </nav>
@@ -39,14 +39,18 @@
     </div>
 <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
-    <h3>front-end Developer</h3>
-    <p>to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.
-    to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.
-    to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.   
-  and deliver.help nurses provide better patient care.
+    <!-- <h3>front-end Developer</h3> -->
+     <h1>Designing with purpose, coding with passion.</h1>
+    <p style="gap: 10px; padding: 20px; font-size: 24px; font-family: outfit;">
+I’m ORJI PATIENCE WILLIAMS, a passionate UI/UX Designer and Front-End Developer dedicated to transforming ideas into beautiful, functional digital experiences through creativity, code, and clean design.
+
+My journey into tech began with a simple curiosity about how stunning websites and apps come to life. That curiosity soon grew into a deep passion for designing and developing user-centered solutions that people genuinely enjoy using.
+
+To me, great design is more than visuals — it’s about understanding people, solving real problems, and creating meaningful, seamless interactions. I approach every project with empathy, innovation, and attention to detail, ensuring each interface feels as good as it looks.
+
+When I’m not sketching wireframes or writing code, I’m usually exploring new design trends, experimenting with new tools, or finding inspiration in everyday experiences.
+
+For me, technology isn’t just a skill — it’s a platform to create impact, tell stories, and connect people through thoughtful design.
 </p>
 <a href="profile.html" class="btn"> back</a>
 </div>
@@ -77,7 +81,7 @@
   <!-- footer section -->
   <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by WILLIAMS FAVOUR | alright reserved.</p>
+            <p>Copyright &copy; 2025 by STAVY-TECH | alright reserved.</p>
         </div>
             <div class="footer-iconTop">
                 <a href="about-me.html"><i class="bx bx-up-arrow-alt"></i></a>
