--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="main.css">
-    <title>FAVOUR</title>
+    <title>MY PORTFOLLIO</title>
 <!-- boxicon link -->
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <!-- end -->
@@ -22,7 +23,7 @@
         <a href="index.html" class="active">Home</a>
         <a href="about-me.html">About</a>
         <a href="service.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Projects</a>
         <a href="contact.html">Contact</a>
 
     </nav>
@@ -32,10 +33,15 @@
    <!-- section for home -->
    <section class="home" id="home">
     <div  class="home-content">
-        <h3>hello, it`s me</h3>
-        <h1>WILLIAMS FAVOUR.</h1>
+        <h3 style="color: aqua;">Designing with purpose, coding with passion.</h3>
+        <h2>I'M</h2>
+        <h1>ORJI, PATIENCE WILLIAMS.</h1>
+        <p> 
         <h3>And i`m a <span class="multiple-text">front-end Developer</span>  and a <span class="multiple-text">UI/UX Designer</span></h3>
-        <p>feel free to chat me up for your software developing, content creation.</p>
+
+
+a UI/UX Designer and Front-End Developer
+ who transforms ideas into clean, engaging, and user-centered digital experiences..</p>
  <div class="social-media">
     <a href="https://www.facebook.com/patience.williams.562329?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
     <a href="https://twitter.com/william49076484"><i class='bx bxl-twitter' ></i></a>
@@ -43,7 +49,8 @@
     <a href="https://www.linkedin.com/in/williams-favour-1a086728a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin' ></i></a>
 
  </div>
-  <a href="img/nysc (2).jpeg" download="" class="btn"> Download CV</a>
+  <a href="img/ORJI PATIENCE WILLIAMS.pdf" download="" class="btn"> Download CV</a>
+  <a href="contact.html" download="" class="btn"> contact me</a>
     </div>
     <div class="home-img">
         <img class="img1" src="img/nysc (2).jpeg" alt="">
@@ -68,6 +75,15 @@
   and deliver.help nurses provide better patient care.
 </p>
 <a href="about-me.html" class="btn"> Read more...</a>
+    <div class="read-more-popup">
+        <p class="read-more-text">I design user-centred interfaces and build responsive front-end experiences. I love working with HTML, CSS and JavaScript to bring ideas to life.</p>
+        <div class="read-more-icons">
+            <a href="#" aria-label="facebook"><i class='bx bxl-facebook'></i></a>
+            <a href="#" aria-label="twitter"><i class='bx bxl-twitter'></i></a>
+            <a href="#" aria-label="instagram"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#" aria-label="linkedin"><i class='bx bxl-linkedin'></i></a>
+        </div>
+    </div>
 </div>
    </section>
    <!-- end of about -->
@@ -210,5 +226,10 @@
                 <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
             </div>
   </footer>
+
+  <!-- javascript -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://cdn.jsdeliver.net/npm/typed.js@2.0.12"></script>
+  <script src="profile.js"></script>
 </body>
 </html>
