--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
         <a href="profile.html" class="active">Home</a>
         <a href="about-me.html">About</a>
         <a href="service.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Projects</a>
         <a href="contact.html">Contact</a>
 
     </nav>
@@ -90,7 +90,7 @@
   <!-- footer section -->
   <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by WILLIAMS FAVOUR | alright reserved.</p>
+            <p>Copyright &copy; 2025 STAVY-TECH | alright reserved.</p>
         </div>
             <div class="footer-iconTop">
                 <a href="service.html"><i class="bx bx-up-arrow-alt"></i></a>
