--- a/portfolio.html
+++ b/portfolio.html
@@ -13,16 +13,16 @@
 </head>
 <body>
    <header class="header">
-    <a href="profile.html" class="logo">portfolio</a>
+    <a href="index.html" class="logo">portfolio</a>
     <!-- font menu-icon -->
      <i class='bx bx-menu' id="menu-icon" ></i>
      <!--  -->
 <!-- nav begin here -->
     <nav class="navbar">
-        <a href="profile.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="about-me.html">About</a>
         <a href="service.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Projects</a>
         <a href="contact.html">Contact</a>
 
     </nav>
@@ -123,7 +123,7 @@
   <!-- footer section -->
   <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by WILLIAMS FAVOUR | alright reserved.</p>
+            <p>Copyright &copy; 2025 by STAVY-TECH | alright reserved.</p>
         </div>
             <div class="footer-iconTop">
                 <a href="portfolio.html"><i class="bx bx-up-arrow-alt"></i></a>
