--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
         <a href="#home" class="active">Home</a>
         <a href="about-me.html">About</a>
         <a href="service.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Projects</a>
         <a href="contact.html">Contact</a>
 
     </nav>
@@ -57,16 +57,21 @@
     </div>
 <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
-    <h3>front-end Developer</h3>
-    <p>to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.
-    to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.
-    to create These computers based information systems are  designed. A good NIS can perform a 
-    number of functions.   
-  and deliver.help nurses provide better patient care.
+    <h3>CREATIVE & FLEXIBLE</h3>
+    <p>Hi, I’m ORJI PATIENCE WILLIAMS,  a passionate UI/UX Designer and Front-End Developer who loves bringing ideas to life through creativity, code, and clean design.
+
+My journey into tech started with a simple curiosity about how beautiful websites and apps are made — and that curiosity grew into a full-blown passion for designing and building digital experiences that people love to use.
 </p>
 <a href="about-me.html" class="btn"> Read more...</a>
+        <div class="read-more-popup">
+            <p class="read-more-text">I design user-centred interfaces and build responsive front-end experiences. <br> I love working with HTML, CSS,  JavaScript and React to bring ideas to life.</p>
+            <div class="read-more-icons">
+                <a href="#" aria-label="facebook"><i class='bx bxl-facebook'></i></a>
+                <a href="#" aria-label="twitter"><i class='bx bxl-twitter'></i></a>
+                <a href="#" aria-label="instagram"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="#" aria-label="linkedin"><i class='bx bxl-linkedin'></i></a>
+            </div>
+        </div>
 </div>
    </section>
    <!-- end of about -->
@@ -199,7 +204,7 @@
   <!-- footer section -->
   <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by WILLIAMS FAVOUR | alright reserved.</p>
+            <p>Copyright &copy; 2025 by STAVY-TECH | alright reserved.</p>
         </div>
             <div class="footer-iconTop">
                 <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
